# pytorch_android_cpp_example

./: .gitignore  LICENSE.txt  README.md
mobilenet_v2_work/: PyTorch MobileNetV2 .ipynb
mobilenet_v2_work/.ipynb_checkpoints/: PyTorch MobileNetV2 -checkpoint.ipynb
pytorch_mobilenet/: build.gradle  settings.gradle
pytorch_mobilenet/app/: build.gradle
pytorch_mobilenet/app/src/androidTest/java/com/adobe/pytorch_mobilenet/: ExampleInstrumentedTest.kt
pytorch_mobilenet/app/src/main/: AndroidManifest.xml
pytorch_mobilenet/app/src/main/cpp/: CMakeLists.txt  MobileCallGuard.h  MobileNet.cpp  MobileNet.h  MobileNetGPU.cpp  MobileNetGPU.h  MobileNetGPUNHWC.cpp  MobileNetGPUNHWC.h  MobileNetNHWC.cpp  MobileNetNHWC.h  native-lib.cpp
pytorch_mobilenet/app/src/main/java/com/adobe/pytorch_mobilenet/: AssetHandler.kt  MainActivity.kt
pytorch_mobilenet/app/src/main/res/layout/: activity_main.xml
pytorch_mobilenet/app/src/main/res/values/: strings.xml  themes.xml
pytorch_mobilenet/app/src/main/res/values-night/: themes.xml
pytorch_mobilenet/app/src/test/java/com/adobe/pytorch_mobilenet/: ExampleUnitTest.kt
pytorch_mobilenet/gradle/wrapper/: gradle-wrapper.properties
